# deep_learning

./: .gitmodules  CMakeLists.txt  README.md  gen.bat
cmake/: armadillo.cmake
examples/: CMakeLists.txt  print_MNIST_digits.cpp
idx-loader/: CMakeLists.txt
idx-loader/src/: IDXLoader.cpp  IDXLoader.h  main.cpp
neural-network/: CMakeLists.txt
neural-network/src/: NeuralNetwork.cpp  NeuralNetwork.h  main.cpp
